# svarog

./: .gitignore  Cargo.toml  README.md  build.mill  build.sbt
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/coremark/: Makefile
benchmarks/coremark/svarog/: core_portme.c  core_portme.h  core_portme.mak  crt0.S  ee_printf.c  linker_rv32_bootrom.ld  linker_rv32_ram.ld  softarith.c
configs/: svg-micro.yaml
docs/: README.md  configuration.md  cpu-architecture.md  development.md  fpga.md  instruction-reference.md  microcontroller-roadmap.md  pipeline-diagrams.md
docs/fpga/: xilinx.md
docs/micro/: README.md  architecture.md  configuration.md  development.md  getting-started.md  traps.md
examples/direct/: Makefile  hello_world_uart.S  linker.ld  linker_rv32_bootrom.ld  linker_rv32_ram.ld  linker_rv64_bootrom.ld  linker_rv64_ram.ld
firmware/: uart_loader.S
src/main/scala/svarog/: GenerateArtix7Top.scala  GenerateVerilatorTop.scala  GenerateVerilog.scala  LoadableInstructionRom.scala  SvarogConfig.scala  SvarogSoC.scala  VerilogGenerator.scala
src/main/scala/svarog/bits/: ALU.scala  CSR.scala  Dividers.scala  IOArbiter.scala  IOGenerator.scala  ImmGen.scala  MemoryUtils.scala  Pin.scala  (+8 more)
src/test/scala/gcd/: GCDSpec.scala
src/test/scala/svarog/: VerilatorWarningSilencer.scala
testbench/: Cargo.toml  QUICK_START.md  README.md  RISCV_TESTS.md  build.rs  verilator_wrapper.cpp  verilator_wrapper.h
testbench/direct-tests/rv32/: clint_timer.S  csr_status_mie_mip.S  csr_test.S  csr_trap_basic.S  exception_test.S  illegal_instruction.S  mret_test.S  mtvec_test.S  zicntr_counters.S
testbench/direct-tests/rv32/common/: crt0.S  linker.ld
testbench/patches/: riscv-tests-no-priv.patch
testbench/src/: bridge.rs  lib.rs
testbench/tests/: direct-tests.rs  integration.rs  manifest.rs  minimal_test.rs  riscv-arch.rs  riscv-tests.rs
utils/arcgen/: Cargo.toml
utils/arcgen/src/: lib.rs
utils/fpga/xilinx/: microphase_a7_lite.xdc  top.v
utils/simgen/: Cargo.toml
utils/simgen/src/: verilator.rs
utils/simtools/: Cargo.toml
utils/simtools/src/: config.rs  lib.rs  utils.rs  verilator.rs
utils/simulator/: Cargo.toml  build.rs
utils/simulator/cpp/templates/: wrapper.cpp.template  wrapper.h.template
utils/simulator/src/: arc.rs  core.rs  generated.rs  lib.rs  main.rs  models.rs  register_file.rs  uart.rs
utils/simulator/src/ffi/: svg_micro.rs
utils/simulator/src/models/: svg_micro.rs
verilator/: .gitignore  Makefile  prepare_verilog.sh  tb_cpu.cpp  tb_cpu_loadstore.cpp  tb_cpu_trace.cpp
(+105 files in other folders)
