[package]
name = "testbench"
version = "0.1.0"
edition = "2024"

[dependencies]
simulator = { path = "../utils/simulator" }
libtest-mimic = "0.8.1"
xshell = "0.2.7"
anyhow = "1.0.100"

[dev-dependencies]
glob = "0.3.3"

[build-dependencies]
anyhow = "1.0.100"
xshell = "0.2.7"
cxx-build = "1.0"
simtools = { path = "../utils/simtools" }

[[test]]
name = "riscv-tests"
path = "tests/riscv-tests.rs"
harness = false

[[test]]
name = "direct-tests"
path = "tests/direct-tests.rs"
harness = false

[[test]]
name = "riscv-arch"
path = "tests/riscv-arch.rs"
harness = false
