[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svarog-sim"
path = "src/main.rs"

[dependencies]
cxx = "1.0"
anyhow = "1.0.100"
camino = "1.1"
snafu = "0.8.9"
elf = "0.8.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2.180"

[build-dependencies]
anyhow = "1.0.100"
xshell = "0.2.7"
cxx-build = "1.0"
glob = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ureq = "2.9"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
