[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svarog-sim"
path = "src/main.rs"

[dependencies]
cxx = "1.0"
anyhow = "1.0.100"
camino = "1.1"
snafu = "0.8.9"
elf = "0.8.0"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.100"
xshell = "0.2.7"
glob = "0.3.3"
simtools = { path = "../simtools" }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.37"
syn = "2.0.114"
